# Flow_Farm

./: .env.example  .gitignore  BUILD_AND_DEPLOY_GUIDE.md  DEPLOYMENT_GUIDE.md  Flow_Farm.code-workspace  INSTALL.md  PRICING_SETTINGS_REMOVAL_LOG.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CLEANUP_SUMMARY_2025_09_02.md  PROJECT_COMPLETION_REPORT.md  PROJECT_REFACTOR_COMPLETE.md  PROJECT_RESTRUCTURE.md  PROJECT_STATUS_REPORT.md  RUST_NATIVE_WEB_SERVER_DEPLOYMENT.md  RUST_NATIVE_WEB_SERVER_SUMMARY.md  build-frontend.bat  build-frontend.ps1  check_db.py  docker-build.ps1  init_project.bat  requirements-dev.txt  requirements.txt  start.bat  start.sh  test_logout_fix.md
.github/: .prompt.md  README.md  copilot-instructions.md
adb_xml_reader/: AUTO_FOLLOW_COMPLETION_REPORT.md  AUTO_FOLLOW_GUIDE.md  CLICK_DEMO_GUIDE.md  Cargo.toml  QUICK_START.md  README.md  USAGE_GUIDE.md  VCF_IMPORT_COMPLETION_REPORT.md  VCF_IMPORT_GUIDE.md  VCF_IMPORT_OPTIMIZATION_REPORT.md  auto_analysis.ps1  auto_analysis_fixed.ps1  contact_import_report.txt  contacts_import.vcf  demo_contacts.vcf  demo_xiaohongshu_clicks.ps1  quick_analysis.bat  sample_contact.vcf  test_auto_follow.bat  test_auto_follow.ps1  test_contacts.txt  test_vcf_import.ps1
docs/: AUTH_REFACTOR_GUIDE.md  AUTH_SYSTEM_VALIDATION_REPORT.md  COPILOT_OPTIMIZATION_REPORT.md  DEPLOYMENT_GUIDE.md  LOGIN_ISSUE_DIAGNOSIS_SOLUTION.md  MANUAL_STARTUP_GUIDE.md  PROJECT_CLEANUP_REPORT.md  README.md  (+4 more)
employee-client/src-tauri/: Cargo.toml
employee-client/src-tauri/src/: adb_manager.rs  api.rs  auth_service.rs  device.rs  main.rs
(+272 files in other folders)
